--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,13 +52,14 @@
     <UnityVersion>2020.1.6f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\SolarPanelScript.cs" />
     <Compile Include="Assets\Scripts\LadderScript.cs" />
     <Compile Include="Assets\Scripts\LightCaster.cs" />
     <Compile Include="Assets\Scripts\Elevator.cs" />
     <Compile Include="Assets\Scripts\PlayerScript.cs" />
     <Compile Include="Assets\Scripts\MasterControl.cs" />
     <Compile Include="Assets\Scripts\EvelatorButton.cs" />
-    <Compile Include="Assets\Scripts\SolarPanelScript.cs" />
+    <Compile Include="Assets\Scripts\MirrorScript.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
