--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,6 +54,8 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\SolarPanelScript.cs" />
     <Compile Include="Assets\Scripts\Deathsplosion.cs" />
+    <Compile Include="Assets\Scripts\NoteRead.cs" />
+    <Compile Include="Assets\Scripts\NotePickup.cs" />
     <Compile Include="Assets\Scripts\LadderScript.cs" />
     <Compile Include="Assets\Scripts\LightCaster.cs" />
     <Compile Include="Assets\Scripts\MirrorScript.cs" />
@@ -62,8 +64,7 @@
     <Compile Include="Assets\Scripts\MasterControl.cs" />
     <Compile Include="Assets\Scripts\EvelatorButton.cs" />
     <Compile Include="Assets\Scripts\Menus.cs" />
-    <Compile Include="Assets\Scripts\NotePickup.cs" />
-    <Compile Include="Assets\Scripts\NoteRead.cs" />
+    <Compile Include="Assets\Scripts\ProjectileScript.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
@@ -72,6 +73,7 @@
      <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
+     <None Include="Assets\How_To_Play.txt" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
      <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
