--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Assets\Scripts\NotePickup.cs" />
     <Compile Include="Assets\Scripts\LadderScript.cs" />
     <Compile Include="Assets\Scripts\LightCaster.cs" />
+    <Compile Include="Assets\Scripts\SpinningBarScrift.cs" />
     <Compile Include="Assets\Scripts\MirrorScript.cs" />
     <Compile Include="Assets\Scripts\Elevator.cs" />
     <Compile Include="Assets\Scripts\PlayerScript.cs" />
@@ -66,7 +67,7 @@
     <Compile Include="Assets\Scripts\EvelatorButton.cs" />
     <Compile Include="Assets\Scripts\Menus.cs" />
     <Compile Include="Assets\Scripts\ProjectileScript.cs" />
-    <Compile Include="Assets\Scripts\SpinningBarScrift.cs" />
+    <Compile Include="Assets\Scripts\BreakableLight.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
