--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\SolarPanelScript.cs" />
+    <Compile Include="Assets\Scripts\LightActivityManager.cs" />
     <Compile Include="Assets\Scripts\Deathsplosion.cs" />
     <Compile Include="Assets\Scripts\SoundManager.cs" />
     <Compile Include="Assets\Scripts\NoteRead.cs" />
@@ -71,7 +72,8 @@
     <Compile Include="Assets\Scripts\BreakableLight.cs" />
     <Compile Include="Assets\Scripts\ProjectileScript.cs" />
     <Compile Include="Assets\Scripts\MoveUpPlatform.cs" />
-    <Compile Include="Assets\Scripts\LightActivityManager.cs" />
+    <Compile Include="Assets\Scripts\MoveDownPlatform.cs" />
+    <Compile Include="Assets\Scripts\BottomStopBox.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
