--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,10 +58,12 @@
     <Compile Include="Assets\Scripts\SoundManager.cs" />
     <Compile Include="Assets\Scripts\NoteRead.cs" />
     <Compile Include="Assets\Scripts\NotePickup.cs" />
+    <Compile Include="Assets\Scripts\BottomStopBox.cs" />
     <Compile Include="Assets\Scripts\LadderScript.cs" />
     <Compile Include="Assets\Scripts\PlaceableMirror.cs" />
     <Compile Include="Assets\Scripts\LightCaster.cs" />
     <Compile Include="Assets\Scripts\WinBox.cs" />
+    <Compile Include="Assets\Scripts\MoveDownPlatform.cs" />
     <Compile Include="Assets\Scripts\SpinningBarScrift.cs" />
     <Compile Include="Assets\Scripts\MirrorScript.cs" />
     <Compile Include="Assets\Scripts\Elevator.cs" />
@@ -72,8 +74,8 @@
     <Compile Include="Assets\Scripts\BreakableLight.cs" />
     <Compile Include="Assets\Scripts\ProjectileScript.cs" />
     <Compile Include="Assets\Scripts\MoveUpPlatform.cs" />
-    <Compile Include="Assets\Scripts\MoveDownPlatform.cs" />
-    <Compile Include="Assets\Scripts\BottomStopBox.cs" />
+    <Compile Include="Assets\Scripts\NextScreenBox.cs" />
+    <Compile Include="Assets\Scripts\SceneSwitcher.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
