--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\SolarPanelScript.cs" />
+    <Compile Include="Assets\Behaviors\DisableAfterFinished.cs" />
     <Compile Include="Assets\Scripts\LightActivityManager.cs" />
     <Compile Include="Assets\Scripts\Deathsplosion.cs" />
     <Compile Include="Assets\Scripts\SoundManager.cs" />
@@ -61,6 +62,7 @@
     <Compile Include="Assets\Scripts\NotePickup.cs" />
     <Compile Include="Assets\Scripts\BottomStopBox.cs" />
     <Compile Include="Assets\Scripts\LadderScript.cs" />
+    <Compile Include="Assets\Behaviors\DestroyAfterFinshed.cs" />
     <Compile Include="Assets\Scripts\PlaceableMirror.cs" />
     <Compile Include="Assets\Scripts\LightCaster.cs" />
     <Compile Include="Assets\Scripts\WinBox.cs" />
@@ -77,8 +79,7 @@
     <Compile Include="Assets\Scripts\BreakableLight.cs" />
     <Compile Include="Assets\Scripts\ProjectileScript.cs" />
     <Compile Include="Assets\Scripts\MoveUpPlatform.cs" />
-    <Compile Include="Assets\Behaviors\DisableAfterFinished.cs" />
-    <Compile Include="Assets\Behaviors\DestroyAfterFinshed.cs" />
+    <Compile Include="Assets\Scripts\CheckpointScript.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
@@ -87,6 +88,7 @@
      <None Include="Assets\SoundTODO.txt" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
+     <None Include="Assets\SaveFiles\save1.txt" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
      <None Include="Assets\How_To_Play.txt" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
