Completed Elevator Level

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Assets\Scripts\BreakableLight.cs" />
     <Compile Include="Assets\Scripts\ProjectileScript.cs" />
     <Compile Include="Assets\Scripts\MoveUpPlatform.cs" />
+    <Compile Include="Assets\Scripts\CamChildOfElevator.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
